--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@ body {
 h1 {
     background-color: white;
 }
+@import url ("style/header.css");
+:root {
+    --cor-de-fundo:#EBECEE
+    --branco: #
+}
